Make sure that two simultaneous online update actions can't be launched by disabling the update action while one update is in progress. Depending on the online connection plugin two simultaneous updates could cause a crash.

BUG: 319417